--- a/blog.html
+++ b/blog.html
@@ -17,9 +17,9 @@
     </header>
     <nav>
       <a href="https://sekuren.github.io">home</a> |
-      <a href="https://sekuren.github.io/blog/">blog</a> |
-      <a href="https://sekuren.github.io/me/">about me</a> |
-      <a href="https://sekuren.github.io/wow">wow</a> 
+      <a href="https://sekuren.github.io/blog.html/">blog</a> |
+      <a href="https://sekuren.github.io/me.html/">about me</a> |
+      <a href="https://sekuren.github.io/wow.html">wow</a> 
     </nav>
     <main>
       
@@ -28,7 +28,7 @@
   
   <li>
     [<small class="subtitle">2023-11-19</small>]
-    <a href="https://sekuren.github.io/gpu-passthrough.md/">A Quick Guide To GPU Passthrough</a>
+    <a href="https://sekuren.github.io/gpu-passthrough.html/">A Quick Guide To GPU Passthrough</a>
   </li>
   
 
