--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
   
   <li>
     [<small class="subtitle">2023-11-19</small>]
-    <a href="https://sekuren.github.io/gpu-passthrough.html/">A Quick Guide To GPU Passthrough</a>
+    <a href="https://sekuren.github.io/gpu-passthrough.html">A Quick Guide To GPU Passthrough</a>
   </li>
   
 
