--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <title>sekuren's blog</title>
     
-    <meta name="description" content="sekuren's blog">
+    <meta name="description" content="sekuren">
     <meta name="author" content="sekuren">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/style.css">
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <h1>sekuren's blog</h1>
+      <h1>sekuren</h1>
     </header>
     <nav>
       <a href="https://sekuren.github.io">home</a> |
