--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
     </header>
     <nav>
       <a href="https://sekuren.github.io">home</a> |
-      <a href="https://sekuren.github.io/blog.html/">blog</a> |
-      <a href="https://sekuren.github.io/me.html/">about me</a> |
+      <a href="https://sekuren.github.io/blog.html">blog</a> |
+      <a href="https://sekuren.github.io/me.html">about me</a> |
       <a href="https://sekuren.github.io/wow.html">wow</a> 
     </nav>
     <main>
