--- a/gpu-passthrough.html
+++ b/gpu-passthrough.html
@@ -27,7 +27,7 @@
       <a href="https://sekuren.github.io">home</a> |
       <a href="https://sekuren.github.io/blog.html">blog</a> |
       <a href="https://sekuren.github.io/me.html">about me</a> |
-      <a href="https://sekuren.github.io/wow.html">wow</a> |
+      <a href="https://sekuren.github.io/wow.html">wow</a> 
     </nav>
 
     <p>Welcome to this quick guide on how to enable GPU passthrough. Let's get started.</p>
