--- a/me.html
+++ b/me.html
@@ -25,9 +25,9 @@
     </header>
     <nav>
       <a href="https://sekuren.github.io">home</a> |
-      <a href="https://sekuren.github.io/blog/">blog</a> |
-      <a href="https://sekuren.github.io/me/">about me</a> |
-      <a href="https://sekuren.github.io/wow">wow</a> |
+      <a href="https://sekuren.github.io/blog.html">blog</a> |
+      <a href="https://sekuren.github.io/me.html">about me</a> |
+      <a href="https://sekuren.github.io/wow.html">wow</a> 
     </nav>
     <p>I'm Sekuren, a 19 year old who loves computers.</p>
 
