--- a/me.html
+++ b/me.html
@@ -33,7 +33,7 @@
 
     <p>Contact me</p>
     <p>Email: <a href="mailto:sekuren@cocaine.ninja">sekuren@cocaine.ninja</a></p>
-    <p>Twitter: <a href="https://twitter.com/sakurenn" target="_blank">https://twitter.com/sakurenn</a></p>
+    <p>Twitter: <a href="https://twitter.com/sekurenn" target="_blank">https://twitter.com/sekurenn</a></p>
     <p>Discord: @sekuren</p>
 </body>
 </html>
