--- a/me.html
+++ b/me.html
@@ -29,7 +29,7 @@
       <a href="https://sekuren.github.io/me.html">about me</a> |
       <a href="https://sekuren.github.io/wow.html">wow</a> 
     </nav>
-    <p>I'm Sekuren, a 19 year old who loves computers.</p>
+    <p>sekuren,ye,ntjorn</p>
 
     <p>Contact me</p>
     <p>Email: <a href="mailto:sekuren@cocaine.ninja">sekuren@cocaine.ninja</a></p>
